2006-07-12  Benjamin Kosnik  <bkoz@redhat.com>

	* include/Makefile.am (pch_output): Don't precompile extc++.h.
	(pch_output_dirs): Same.
	* include/Makefile.in: Regenerate.

	* testsuite/lib/libstdc++.exp: Test PCH with stdtr1c++.h.
	
2006-07-11  Paolo Carlini  <pcarlini@suse.de>

	* include/ext/codecvt_specializations.h: Fix typo in commit
	for libstdc++/28290.

2006-07-11  Paolo Carlini  <pcarlini@suse.de>

	* include/bits/locale_facets.tcc (collate<>::do_transform(
	const _CharT*, const _CharT*)): Simplify previous fix for
	libstdc++/28277, always allocate memory dynamically.

2006-07-11  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/28344
	* include/tr1/random (gamma_distribution<>::
	gamma_distribution(const result_type&)): Don't use __alpha as
	parameter name, a predefined macro on Alpha systems.

2006-07-11  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/28290
	* include/ext/codecvt_specializations.h: Fix, adding missing
	includes and guards.

2006-07-11  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/28277 (partial: collate bits)
	* include/bits/locale_facets.tcc (collate<>::do_transform(
	const _CharT*, const _CharT*)): Avoid __builtin_alloca with no
	limit; also avoid multiple calls (in a loop).
	* testsuite/22_locale/collate/transform/char/28277.cc: New.
	* testsuite/22_locale/collate/transform/wchar_t/28277.cc: Likewise.

2006-07-10  Mike Stump  <mrs@apple.com>

	* libsupc++/eh_globals.cc (~__eh_globals_init): Unset _M_init.

2006-07-10  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/15448
	* include/Makefile.am: Clean up pch rules.
	* include/Makefile.in: Regenerate.

2006-07-09  Paolo Carlini  <pcarlini@suse.de>

	* include/bits/locale_facets.tcc (__int_to_char<>(_CharT*,
	long, const _CharT*, ios_base::fmtflags), __int_to_char<>(_CharT*,
	unsigned long, const _CharT*, ios_base::fmtflags),
	__int_to_char<>(_CharT*, long long, const _CharT*, ios_base::fmtflags),
	__int_to_char<>(_CharT*, unsigned long long, const _CharT*,